--- a/frontend/web/uw/sass/uw.scss
+++ b/frontend/web/uw/sass/uw.scss
@@ -2,7 +2,7 @@
 	clear: both;
 }
 body {
-	min-width: 480px;
+	//min-width: 480px;
 	font-family: 'Proxima Nova Light', sans-serif;
 }
 .btn-transparent {
