--- a/frontend/web/uw/stylesheets/timeline.css
+++ b/frontend/web/uw/stylesheets/timeline.css
@@ -14,19 +14,18 @@
 /* line 12, ../sass/timeline.scss */
 .timeline h1 {
   text-align: center;
-  font: 55px 'Proxima Nova Regular', sans-serif;
-  font-weight: bold;
+  font: 55px 'Proxima Nova', sans-serif;
   color: #3B0F50;
   text-transform: uppercase;
-  margin-top: 73px;
+  margin-top: 25px;
   margin-bottom: 50px;
   line-height: 39px;
 }
-/* line 21, ../sass/timeline.scss */
+/* line 20, ../sass/timeline.scss */
 .timeline h1 span {
   display: block;
   margin-top: 10px;
-  font-size: 30px;
+  font-size: 0.6em;
 }
 @media screen and (max-width: 1000px) {
   /* line 12, ../sass/timeline.scss */
@@ -37,13 +36,13 @@
 @media screen and (max-width: 1000px) {
   /* line 12, ../sass/timeline.scss */
   .timeline h1 {
-    font-size: 30px;
+    font-size: 35px;
     padding-left: 20px;
     padding-right: 20px;
     line-height: 40px;
   }
 }
-/* line 37, ../sass/timeline.scss */
+/* line 36, ../sass/timeline.scss */
 .timeline .sliderbox {
   position: relative;
   display: flex;
@@ -53,44 +52,44 @@
   -o-transition: margin-left 1s ease-out;
   transition: margin-left 1s ease-out;
 }
-/* line 45, ../sass/timeline.scss */
+/* line 44, ../sass/timeline.scss */
 .timeline .sliderbox .item {
   position: relative;
   cursor: pointer;
 }
-/* line 48, ../sass/timeline.scss */
+/* line 47, ../sass/timeline.scss */
 .timeline .sliderbox .item .image img {
   display: block;
   width: 100%;
 }
-/* line 52, ../sass/timeline.scss */
+/* line 51, ../sass/timeline.scss */
 .timeline .sliderbox .item .date {
   padding: 30px 0 0 30px;
   height: 120px;
 }
-/* line 55, ../sass/timeline.scss */
+/* line 54, ../sass/timeline.scss */
 .timeline .sliderbox .item .date .date-item {
   color: #010211;
   font-size: 18px;
   line-height: 24px;
   transition: .2s;
 }
-/* line 63, ../sass/timeline.scss */
+/* line 62, ../sass/timeline.scss */
 .timeline .sliderbox .item.active .dot {
   background-color: #C39C17 !important;
   border-color: #fff !important;
 }
-/* line 68, ../sass/timeline.scss */
+/* line 67, ../sass/timeline.scss */
 .timeline .sliderbox .item.active .date .date-item {
   font: 33px 'Proxima Nova Bl', sans-serif;
   line-height: 30px;
   color: #C59D17;
 }
-/* line 74, ../sass/timeline.scss */
+/* line 73, ../sass/timeline.scss */
 .timeline .sliderbox .item .hr {
   border: 3px solid #fff;
 }
-/* line 78, ../sass/timeline.scss */
+/* line 77, ../sass/timeline.scss */
 .timeline .sliderbox .item .description {
   margin: 0 100px 0 0;
   padding-bottom: 30px;
@@ -98,7 +97,7 @@
   height: 100%;
   background: #fff;
 }
-/* line 85, ../sass/timeline.scss */
+/* line 83, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .dot {
   position: absolute;
   top: 4px;
@@ -109,12 +108,12 @@
   height: 26px;
   width: 26px;
 }
-/* line 96, ../sass/timeline.scss */
+/* line 94, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .dot + p {
   padding-top: 40px;
   padding-bottom: 20px;
 }
-/* line 101, ../sass/timeline.scss */
+/* line 99, ../sass/timeline.scss */
 .timeline .sliderbox .item .description p {
   font-family: "Proxima Nova Light";
   font-size: 18px;
@@ -122,7 +121,7 @@
   padding: 0 30px;
   margin: 0;
 }
-/* line 109, ../sass/timeline.scss */
+/* line 107, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .circle {
   opacity: 0;
   transition: opacity 1s ease-out;
@@ -130,7 +129,7 @@
   width: 0;
   height: 0;
 }
-/* line 117, ../sass/timeline.scss */
+/* line 115, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .active {
   pointer-events: unset;
   opacity: 1;
@@ -145,15 +144,15 @@
   height: 125px;
   width: 125px;
 }
-/* line 131, ../sass/timeline.scss */
+/* line 129, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .active.fl {
   margin-left: -65px;
 }
-/* line 135, ../sass/timeline.scss */
+/* line 133, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .active.fr {
   margin-left: 445px;
 }
-/* line 139, ../sass/timeline.scss */
+/* line 137, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .active .prev, .timeline .sliderbox .item .description .active .next {
   position: absolute;
   width: 100%;
@@ -161,7 +160,7 @@
   color: #fff;
   transition: transform .5s;
 }
-/* line 146, ../sass/timeline.scss */
+/* line 144, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .active .prev::after, .timeline .sliderbox .item .description .active .next::after {
   content: '';
   display: block;
@@ -178,7 +177,7 @@
   transition: .2s;
   z-index: 0;
 }
-/* line 162, ../sass/timeline.scss */
+/* line 160, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .active .prev i, .timeline .sliderbox .item .description .active .next i {
   position: absolute;
   top: 50%;
@@ -186,223 +185,262 @@
   transform: translate(-50%, -50%);
   z-index: 1;
 }
-/* line 171, ../sass/timeline.scss */
+/* line 169, ../sass/timeline.scss */
 .timeline .sliderbox .item .description .active:hover .prev::after, .timeline .sliderbox .item .description .active:hover .next::after {
   width: 55px;
   height: 55px;
 }
 @media screen and (min-width: 1366px) and (max-width: 1599px) {
-  /* line 180, ../sass/timeline.scss */
+  /* line 178, ../sass/timeline.scss */
   .timeline .sliderbox .item .date {
     padding: 25.5px 0 0 25.5px;
     height: 120px;
   }
-  /* line 183, ../sass/timeline.scss */
+  /* line 181, ../sass/timeline.scss */
   .timeline .sliderbox .item .date .date-item {
     font-size: 15.3px;
     line-height: 20.4px;
   }
-  /* line 189, ../sass/timeline.scss */
+  /* line 187, ../sass/timeline.scss */
   .timeline .sliderbox .item.active > .date {
     padding-top: 10px;
   }
-  /* line 193, ../sass/timeline.scss */
+  /* line 191, ../sass/timeline.scss */
   .timeline .sliderbox .item.active > .date > .date-item {
     font-size: 34px;
     line-height: 34px;
   }
-  /* line 198, ../sass/timeline.scss */
+  /* line 196, ../sass/timeline.scss */
   .timeline .sliderbox .item .description {
     margin: 0 85px 0 0;
     width: 433.5px;
     height: 100%;
   }
-  /* line 203, ../sass/timeline.scss */
+  /* line 201, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .dot {
-    border: 2.55px solid #dbc8ae;
     height: 22.1px;
     width: 22.1px;
     margin: -12px 0 0 12.75px;
   }
-  /* line 210, ../sass/timeline.scss */
+  /* line 207, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .dot + p {
     padding-top: 34px;
     padding-bottom: 16px;
   }
-  /* line 215, ../sass/timeline.scss */
+  /* line 212, ../sass/timeline.scss */
   .timeline .sliderbox .item .description p {
     font-size: 16px;
     line-height: 26px;
     padding: 0 26px;
   }
-  /* line 221, ../sass/timeline.scss */
+  /* line 218, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active {
     font-size: 18px;
     line-height: 42px;
     height: 106.25px;
     width: 106.25px;
   }
-  /* line 227, ../sass/timeline.scss */
+  /* line 224, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active.fl {
     margin-left: -55.25px;
   }
-  /* line 231, ../sass/timeline.scss */
+  /* line 228, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active.fr {
     margin-left: 378.25px;
   }
 }
 @media screen and (min-width: 1280px) and (max-width: 1365px) {
-  /* line 239, ../sass/timeline.scss */
+  /* line 236, ../sass/timeline.scss */
   .timeline .sliderbox .item .date {
     padding: 22.5px 0 0 22.5px;
     height: 75px;
   }
-  /* line 242, ../sass/timeline.scss */
+  /* line 239, ../sass/timeline.scss */
   .timeline .sliderbox .item .date .date-item {
     font-size: 13.5px;
     line-height: 18px;
   }
-  /* line 248, ../sass/timeline.scss */
+  /* line 245, ../sass/timeline.scss */
   .timeline .sliderbox .item.active > .date {
     padding-top: 5px;
   }
-  /* line 252, ../sass/timeline.scss */
+  /* line 249, ../sass/timeline.scss */
   .timeline .sliderbox .item.active > .date > .date-item {
     font-size: 30px;
     line-height: 30px;
   }
-  /* line 257, ../sass/timeline.scss */
+  /* line 254, ../sass/timeline.scss */
   .timeline .sliderbox .item .description {
     margin: 0 75px 0 0;
     width: 382.5px;
-    height: 337.5px;
   }
-  /* line 262, ../sass/timeline.scss */
+  /* line 258, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .dot {
     border: 2.25px solid #dbc8ae;
     height: 19.5px;
     width: 19.5px;
     margin: -11px 0 0 11.25px;
   }
-  /* line 269, ../sass/timeline.scss */
+  /* line 265, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .dot + p {
     padding-top: 30px;
     padding-bottom: 15px;
   }
-  /* line 274, ../sass/timeline.scss */
+  /* line 270, ../sass/timeline.scss */
   .timeline .sliderbox .item .description p {
     font-size: 13.5px;
     line-height: 22.5px;
     padding: 0 22.5px;
   }
-  /* line 280, ../sass/timeline.scss */
+  /* line 276, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active {
     font-size: 15px;
     line-height: 37.5px;
     height: 93.75px;
     width: 93.75px;
   }
-  /* line 286, ../sass/timeline.scss */
+  /* line 282, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active.fl {
     margin-left: -48.75px;
   }
-  /* line 290, ../sass/timeline.scss */
+  /* line 286, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active.fr {
     margin-left: 333.75px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1279px) {
-  /* line 298, ../sass/timeline.scss */
+  /* line 294, ../sass/timeline.scss */
   .timeline .sliderbox .item .date {
     padding: 21px 0 0 21px;
     height: 70px;
   }
-  /* line 301, ../sass/timeline.scss */
+  /* line 297, ../sass/timeline.scss */
   .timeline .sliderbox .item .date .date-item {
     font-size: 12.6px;
     line-height: 16.8px;
   }
-  /* line 307, ../sass/timeline.scss */
+  /* line 303, ../sass/timeline.scss */
   .timeline .sliderbox .item.active > .date {
     padding-top: 2.5px;
   }
-  /* line 311, ../sass/timeline.scss */
+  /* line 307, ../sass/timeline.scss */
   .timeline .sliderbox .item.active > .date > .date-item {
     font-size: 28px;
     line-height: 28px;
   }
-  /* line 316, ../sass/timeline.scss */
+  /* line 312, ../sass/timeline.scss */
   .timeline .sliderbox .item .description {
     margin: 0 70px 0 0;
     width: 357px;
-    height: 315px;
   }
-  /* line 321, ../sass/timeline.scss */
+  /* line 316, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .dot {
     border: 2.1px solid #dbc8ae;
     height: 18.2px;
     width: 18.2px;
     margin: -10px 0 0 10.5px;
   }
-  /* line 328, ../sass/timeline.scss */
+  /* line 323, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .dot + p {
     padding-top: 28px;
     padding-bottom: 14px;
   }
-  /* line 333, ../sass/timeline.scss */
+  /* line 328, ../sass/timeline.scss */
   .timeline .sliderbox .item .description p {
     font-size: 12.6px;
     line-height: 21px;
     padding: 0 21px;
   }
-  /* line 339, ../sass/timeline.scss */
+  /* line 334, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active {
-    border: 1.4px solid #dbc8ae;
-    font-size: 14px;
-    line-height: 35px;
     height: 87.5px;
     width: 87.5px;
   }
-  /* line 346, ../sass/timeline.scss */
+  /* line 338, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active.fl {
     margin-left: -45.5px;
   }
-  /* line 350, ../sass/timeline.scss */
+  /* line 342, ../sass/timeline.scss */
   .timeline .sliderbox .item .description .active.fr {
     margin-left: 311.5px;
   }
 }
-/* line 359, ../sass/timeline.scss */
+@media screen and (min-width: 501px) and (max-width: 767px) {
+  /* line 350, ../sass/timeline.scss */
+  .timeline .sliderbox .item .description .dot {
+    height: 25px;
+    width: 25px;
+    top: 1px;
+    margin: -10px 0 0 10.5px;
+  }
+}
+/* line 361, ../sass/timeline.scss */
 .timeline .sliderbox .item:last-child .hr {
   width: 510px;
 }
 @media screen and (min-width: 1366px) and (max-width: 1599px) {
-  /* line 363, ../sass/timeline.scss */
+  /* line 365, ../sass/timeline.scss */
   .timeline .sliderbox .item:last-child .hr {
     width: 433.5px;
   }
 }
 @media screen and (min-width: 1280px) and (max-width: 1365px) {
-  /* line 368, ../sass/timeline.scss */
+  /* line 370, ../sass/timeline.scss */
   .timeline .sliderbox .item:last-child .hr {
     width: 382.5px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1279px) {
-  /* line 373, ../sass/timeline.scss */
+  /* line 375, ../sass/timeline.scss */
   .timeline .sliderbox .item:last-child .hr {
     width: 357px;
   }
 }
 
-/* line 384, ../sass/timeline.scss */
+/* line 386, ../sass/timeline.scss */
 ::-webkit-scrollbar {
   width: 0px;
   height: 0px;
 }
 
-/* line 389, ../sass/timeline.scss */
+/* line 391, ../sass/timeline.scss */
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
+}
+
+@media screen and (max-width: 500px) {
+  /* line 396, ../sass/timeline.scss */
+  .timeline .sliderbox .item .description {
+    width: 320px;
+    position: relative;
+    padding-bottom: 80px;
+  }
+  /* line 400, ../sass/timeline.scss */
+  .timeline .sliderbox .item .description .fl {
+    left: 2px;
+    top: 20%;
+    width: 55px;
+    height: 55px;
+    margin: 0 !important;
+  }
+  /* line 407, ../sass/timeline.scss */
+  .timeline .sliderbox .item .description .fr {
+    right: 2px;
+    top: 20%;
+    width: 55px;
+    height: 55px;
+    margin: 0 !important;
+  }
+  /* line 414, ../sass/timeline.scss */
+  .timeline .sliderbox .item .description .fl.active, .timeline .sliderbox .item .description .fr.active {
+    opacity: .5;
+  }
+  /* line 417, ../sass/timeline.scss */
+  .timeline .sliderbox .item .description .dot {
+    height: 25px;
+    width: 25px;
+    top: -4px;
+    margin: -10px 0 0 10.5px;
+  }
 }
