--- a/frontend/web/uw/sass/renovation.scss
+++ b/frontend/web/uw/sass/renovation.scss
@@ -6,11 +6,10 @@
 	
 	h1 {
 		text-align: center;
-		font-family: "Proxima Nova Regular", sans-serif;
-		font-size: 40px;
-		font-weight: bold;
+		font-family: "Proxima Nova", sans-serif;
+		font-size: 37px;
 		text-transform: uppercase;
-		margin-top: 73px;
+		margin-top: 25px;
 		margin-bottom: 19px;
 		line-height: 39px;
 		letter-spacing: 1px;
