--- a/frontend/web/uw/sass/timeline.scss
+++ b/frontend/web/uw/sass/timeline.scss
@@ -11,23 +11,22 @@
 	
 	h1 {
 		text-align: center;
-		font: 55px 'Proxima Nova Regular', sans-serif;
-		font-weight: bold;
+		font: 55px 'Proxima Nova', sans-serif;
 		color: #3B0F50;
 		text-transform: uppercase;
-		margin-top: 73px;
+		margin-top: 25px;
 		margin-bottom: 50px;
 		line-height: 39px;
 		span {
 			display: block;
 			margin-top: 10px;
-			font-size: 30px;
+			font-size: 0.6em;
 		}
 			@media screen and (max-width: 1000px) {
 				font-size: 22px;
 			}
 		@media screen and (max-width: 1000px) {
-			font-size: 30px;
+			font-size: 35px;
 			padding-left: 20px;
 			padding-right: 20px;
 			line-height: 40px;
@@ -81,7 +80,6 @@
 				width: 510px;
 				height: 100%;
 				background: #fff;
-
 				.dot {
 					position: absolute;
 					top: 4px;
@@ -201,10 +199,9 @@
 					height: 100%;
 
 					.dot {
-    					border: 2.55px solid #dbc8ae;						
     					height: 22.1px;
     					width: 22.1px;
-    					margin: -12px 0 0 12.75px;					
+    					margin: -12px 0 0 12.75px;
 					}
 
 					.dot + p {
@@ -257,13 +254,12 @@
 				.description {
 		    		margin: 0 75px 0 0;
 					width: 382.5px;
-					height: 337.5px;
 
 					.dot {
     					border: 2.25px solid #dbc8ae;
     					height: 19.5px;
     					width: 19.5px;
-    					margin: -11px 0 0 11.25px;					
+    					margin: -11px 0 0 11.25px;
 					}
 
 					.dot + p {
@@ -316,7 +312,6 @@
 				.description {
 		    		margin: 0 70px 0 0;
 					width: 357px;
-					height: 315px;
 
 					.dot {
     					border: 2.1px solid #dbc8ae;
@@ -337,9 +332,6 @@
 					}
 
 					.active {
-						border: 1.4px solid #dbc8ae;
-						font-size: 14px;
-						line-height: 35px;
 						height: 87.5px;
 						width: 87.5px;
 
@@ -350,6 +342,16 @@
 						&.fr {
 							margin-left: 311.5px;
 						}
+					}
+				}
+			}
+			@media screen and (min-width: 501px) and (max-width: 767px){
+				.description {
+					.dot {
+						height: 25px;
+						width: 25px;
+						top: 1px;
+						margin: -10px 0 0 10.5px;
 					}
 				}
 			}
@@ -389,4 +391,34 @@ $scrollBarHeight: 0px;
 ::-webkit-scrollbar-button {
   width: $scrollBarHeight;
   height: $scrollBarHeight;
+}
+@media screen and (max-width: 500px) {
+	.timeline .sliderbox .item .description {
+		width: 320px;
+		position: relative;
+		padding-bottom: 80px;
+		.fl {
+			left: 2px;
+			top: 20%;
+			width: 55px;
+			height: 55px;
+			margin: 0 !important;
+		}
+		.fr {
+			right: 2px;
+			top: 20%;
+			width: 55px;
+			height: 55px;
+			margin: 0 !important;
+		}
+		.fl.active, .fr.active {
+			opacity: .5;
+		}
+		.dot {
+			height: 25px;
+			width: 25px;
+			top: -4px;
+			margin: -10px 0 0 10.5px;
+		}
+	}
 }
