--- a/frontend/web/uw/stylesheets/law.css
+++ b/frontend/web/uw/stylesheets/law.css
@@ -12,16 +12,55 @@
   padding-top: 270px;
 }
 /* line 12, ../sass/law.scss */
+.law .law-header .container_inner {
+  position: relative;
+}
+/* line 14, ../sass/law.scss */
+.law .law-header .container_inner .social-wrap {
+  position: absolute;
+  top: calc(100% + 40px);
+  right: calc(100% + 40px);
+}
+/* line 18, ../sass/law.scss */
+.law .law-header .container_inner .social-wrap a {
+  position: relative;
+  display: block;
+  width: 45px;
+  height: 45px;
+  background: #361750;
+  margin-bottom: 1px;
+  color: #fff;
+  -webkit-transition: .2s;
+  -moz-transition: .2s;
+  -ms-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s;
+}
+/* line 31, ../sass/law.scss */
+.law .law-header .container_inner .social-wrap a i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+/* line 42, ../sass/law.scss */
+.law .law-header .container_inner .social-wrap a:hover {
+  background: #b99c2d;
+}
+/* line 47, ../sass/law.scss */
 .law .law-header h1 {
   text-align: center;
-  font: 55px 'Proxima Nova Regular', sans-serif;
-  font-weight: bold;
+  font: 55px 'Proxima Nova', sans-serif;
   color: #fff;
   text-transform: uppercase;
   line-height: 39px;
   letter-spacing: 1px;
 }
-/* line 21, ../sass/law.scss */
+/* line 55, ../sass/law.scss */
 .law .law-header h1::after {
   content: '';
   display: block;
@@ -30,18 +69,18 @@
   background: #C59D17;
   margin: 50px auto;
 }
-/* line 29, ../sass/law.scss */
+/* line 63, ../sass/law.scss */
 .law .law-header p {
   color: #fff;
   font-size: 22px;
   font-style: italic;
   font-weight: bold;
 }
-/* line 35, ../sass/law.scss */
+/* line 69, ../sass/law.scss */
 .law .law-header .btn-wrap {
   padding: 80px 0;
 }
-/* line 38, ../sass/law.scss */
+/* line 72, ../sass/law.scss */
 .law .law-header .btn-down {
   position: relative;
   display: block;
@@ -54,32 +93,32 @@
   font-size: 17px;
   cursor: pointer;
 }
-/* line 49, ../sass/law.scss */
+/* line 83, ../sass/law.scss */
 .law .law-header .btn-down i {
   position: absolute;
   bottom: 2px;
   left: 50%;
   transform: translateX(-50%);
 }
-/* line 57, ../sass/law.scss */
+/* line 91, ../sass/law.scss */
 .law .law-content {
   padding-top: 80px;
 }
-/* line 59, ../sass/law.scss */
+/* line 93, ../sass/law.scss */
 .law .law-content .urls {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-/* line 63, ../sass/law.scss */
+/* line 97, ../sass/law.scss */
 .law .law-content .urls li:not(:last-child) {
   margin-bottom: 5px;
 }
-/* line 66, ../sass/law.scss */
+/* line 100, ../sass/law.scss */
 .law .law-content .urls a {
   color: #00A2D6;
 }
-/* line 70, ../sass/law.scss */
+/* line 104, ../sass/law.scss */
 .law .law-content .urls::after {
   content: '';
   display: block;
@@ -88,17 +127,17 @@
   background: #C59D17;
   margin: 30px 0;
 }
-/* line 78, ../sass/law.scss */
+/* line 112, ../sass/law.scss */
 .law .law-content .facts {
   padding: 0;
   margin: 0 0 30px;
   list-style: none;
 }
-/* line 82, ../sass/law.scss */
+/* line 116, ../sass/law.scss */
 .law .law-content .facts li:not(:last-child) {
   margin-bottom: 5px;
 }
-/* line 86, ../sass/law.scss */
+/* line 120, ../sass/law.scss */
 .law .law-content .btn-wrap .btn {
   font-size: 15px;
   border-radius: 0px;
@@ -107,30 +146,30 @@
   border-color: #C59D17;
   background: #C59D17;
 }
-/* line 94, ../sass/law.scss */
+/* line 128, ../sass/law.scss */
 .law .law-content .pagination {
   width: 100%;
   margin-top: 100px;
   text-align: center;
 }
-/* line 98, ../sass/law.scss */
+/* line 132, ../sass/law.scss */
 .law .law-content .pagination li.prev a,
 .law .law-content .pagination li.prev span {
   background: transparent;
   font-size: 20px;
 }
-/* line 103, ../sass/law.scss */
+/* line 137, ../sass/law.scss */
 .law .law-content .pagination li.next a,
 .law .law-content .pagination li.next a {
   background: transparent;
   font-size: 20px;
 }
-/* line 108, ../sass/law.scss */
+/* line 142, ../sass/law.scss */
 .law .law-content .pagination li {
   margin: 0px 4px;
   display: inline-block;
 }
-/* line 111, ../sass/law.scss */
+/* line 145, ../sass/law.scss */
 .law .law-content .pagination li a {
   font-size: 15px;
   line-height: 38px;
@@ -141,17 +180,17 @@
   padding: 0px;
   text-align: center;
 }
-/* line 122, ../sass/law.scss */
+/* line 156, ../sass/law.scss */
 .law .law-content .pagination li.active a {
   color: white;
   background: #3B0F50;
   border: 1px solid #3B0F50;
 }
-/* line 129, ../sass/law.scss */
+/* line 163, ../sass/law.scss */
 .law .law-content .pagination li.next a, .law .law-content .pagination li.prev a {
   border: 1px solid transparent;
 }
-/* line 132, ../sass/law.scss */
+/* line 166, ../sass/law.scss */
 .law .law-content .pagination li.next span, .law .law-content .pagination li.prev span {
   border: 1px solid transparent;
   line-height: 38px;
@@ -160,11 +199,11 @@
   display: inline-block;
   padding: 0px;
 }
-/* line 143, ../sass/law.scss */
+/* line 177, ../sass/law.scss */
 .law .law-content .law-text {
   margin-top: 70px;
 }
-/* line 145, ../sass/law.scss */
+/* line 179, ../sass/law.scss */
 .law .law-content .law-text h2 {
   margin-bottom: 30px;
   font: 35px 'Proxima Nova Regular';
@@ -172,9 +211,14 @@
   color: #00A2D6;
   letter-spacing: 1px;
 }
-/* line 152, ../sass/law.scss */
+/* line 186, ../sass/law.scss */
 .law .law-content .law-text p {
   margin-bottom: 25px;
   font-size: 18px;
   line-height: 25px;
+}
+
+/* line 195, ../sass/law.scss */
+.law .top_block .social {
+  display: none;
 }
